--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ readme = "README.md"
 python = "^3.6"
 pydantic = "^0.32.2"
 hypothesis = "^4.36"
+pytest = { version = "^4.0.0", optional = true }
+
+[tool.poetry.extras]
+pytest = ["pytest"]
 
 [tool.poetry.dev-dependencies]
 vulture = "^1.0"
