--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hypothesis-auto"
-version = "0.0.4"
+version = "1.0.0"
 description = "Extends Hypothesis to add fully automatic testing of type annotated functions"
 authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
 license = "MIT"
@@ -10,11 +10,14 @@ readme = "README.md"
 python = "^3.6"
 pydantic = "^0.32.2"
 hypothesis = "^4.36"
+pytest = { version = "^4.0.0", optional = true }
+
+[tool.poetry.extras]
+pytest = ["pytest"]
 
 [tool.poetry.dev-dependencies]
 vulture = "^1.0"
 bandit = "^1.6"
-pytest = "^5.1"
 safety = "^1.8"
 isort = "^4.3"
 flake8-bugbear = "^19.8"
