--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ matrix:
   include:
   - os: linux
     sudo: required
+    python: 3.5
+  - os: linux
+    sudo: required
     python: 3.6
   - os: linux
     sudo: required
