--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ matrix:
   - os: linux
     python: 3.7
     env: DEPLOY=yes
+  - os: linux
+    python: 3.8
   - os: osx
     language: generic
 script:
