--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-pydantic = ">=0.32.2"
+pydantic = ">=0.32.2<2.0.0"
 hypothesis = "^4.36"
 pytest = { version = "^4.0.0", optional = true }
 
