--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ favicon = "art/logo.png"
 logo = "art/logo.png"
 name = "material"
 palette = {primary = "teal", accent = "cyan"}
+
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
