--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-pydantic = ">=0.32.2<2.0.0"
-hypothesis = ">=4.36<6.0.0"
+pydantic = ">=0.32.2, <2.0.0"
+hypothesis = ">=4.36, <6.0.0"
 pytest = { version = "^4.0.0", optional = true }
 
 [tool.poetry.extras]
