--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,29 +10,29 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.6"
 pydantic = ">=0.32.2, <2.0.0"
 hypothesis = ">=4.36, <6.0.0"
-pytest = { version = "^4.0.0", optional = true }
+pytest = { version = ">=4.0.0", optional = true }
 
 [tool.poetry.extras]
 pytest = ["pytest"]
 
 [tool.poetry.dev-dependencies]
-vulture = "^1.0"
-bandit = "^1.6"
-safety = "^1.8"
-isort = "^4.3"
-flake8-bugbear = "^19.8"
-black = {version = "^18.3-alpha.0", allow-prereleases = true}
-mypy = "^0.730.0"
-ipython = "^7.7"
-pytest-cov = "^2.7"
-pytest-mock = "^1.10"
-pep8-naming = "^0.8.2"
-portray = "^1.3.0"
-cruft = "^1.1"
-numpy = "^1.18.0"
+vulture = ">=1.0"
+bandit = ">=1.6"
+safety = ">=1.8"
+isort = ">=4.3"
+flake8-bugbear = ">=19.8"
+black = {version=">=1.0.0", python=">=3.7"}
+mypy = ">=0.730.0"
+ipython = ">=7.7"
+pytest-cov = ">=2.7"
+pytest-mock = ">=1.10"
+pep8-naming = ">=0.8.2"
+portray = {version=">=1.3.0", python=">3.7,<4.0"}
+cruft = {version=">=1.1", python=">3.7,<4.0"}
+numpy = {version=">=1.21.5", python=">=3.7,<3.11"}
 
 [tool.portray]
 modules = ["hypothesis_auto"]
